# severus

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: README.md  installation.md  quickstart.md
severus/: __version__.py  apis.py  ctx.py  datastructures.py  language.py  translator.py
tests/: conftest.py  test_language.py  test_translator.py
tests/lang1/: en.json  it.yml
tests/lang2/: en.json  ru.yml
tests/lang2/it/: like.json  weather.yml
