[project]
name = "severus"

[tool.poetry]
name = "severus"
version = "1.2.2"
description = "An internationalization engine designed with simplicity in mind"
authors = ["Giovanni Barillari <gi0baro@d4net.org>"]
license = "BSD-3-Clause"

readme = "README.md"
homepage = "https://github.com/emmett-framework/severus"
repository = "https://github.com/emmett-framework/severus"

keywords = ["internationalization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    {include = "severus"},
    {include = "tests", format = "sdist"}
]
include = [
    "CHANGES.md",
    "LICENSE",
    "docs/**/*"
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/emmett-framework/severus/issues"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
